    - Updated Pam's Harvestcraft so it can detect it now.
  Added Team Manager.
  Added Circuit Fabricator.
    - Added 8 circuits, however you can only craft 7 of them at the moment.
  Added a standard Generator to ADDSynth Energy.
    - It takes in standard fuel items such as Coal, Charcoal, Wood, and Planks.
    - Updated the texture to high definition.
CHANGED:
  Made ADDSynth Materials into its own mod.
  The Music Box gui no longer has the JEI item panel, because it doesn't need it.
  The Creative Tab icon for ADDSynth Energy is now the new Generator.
  The Generator that was part of Overpowered has been renamed to Crystal Energy Extractor.
REMOVED:
  Removed the ability to move some Overpowered items into other Creative Tabs.



v1.3.4 - December 28, 2020
  Major code optimizations and maintenance.
  Fix Laser Distance or Energy not saving on world reload.
  Energy stored in Batteries is now balanaced across all batteries on the
    Energy Network.
  Fixed several errors with the Universal Energy Interface.
  Batteries that are removed now redistribute any leftover energy to other
    connected batteries.
  Fix Universal Energy Interface not depositing energy into Energy
    Storage Containers.
  Fix machines receiving double energy if you had an Energy Storage Container
    on your energy network.
  You can now specify the Laser maximum receive variable in the config.
  Fixed a rare crash that would occur if you reloaded the world while a machine
    was working on its last item.
  Fix message telling players the black hole is not allowed in this dimension
    was displaying twice. - Error since v1.3.
  Added an alternate crafting recipe for the Fusion Energy Converter.
  Fixed a few recipe advancements not working. But nobody cares about that.



v1.3.3 - October 13, 2020
  Fixed Inverter crash. sigh.
  Added an alternate crafting recipe for the Caution Block.
  No longer displays Portal warning message as the Unknown Dimension