@@ -10,7 +10,7 @@
       "tag": "forge:plates/platinum"
     },
     "b": {
-      "item": "overpowered:beam_emitter"
+      "item": "overpowered:scanning_laser"
     },
     "e": {
       "item": "overpowered:energized_power_core"
