@@ -16,7 +16,7 @@
       "item": "overpowered:focus_lens"
     },
     "e": {
-      "item": "overpowered:energy_grid"
+      "item": "overpowered:scanning_laser"
     },
     "d": {
       "item": "overpowered:data_cable"
